--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
       const currentValue = parseInt(counterElement.innerText);
 
       // Display an alert with the un-incremented value
-      alert('Un-incremented value: ' + currentValue);
+      alert(currentValue);
 
       // Increment the counter value and update the display
       counterElement.innerText = currentValue + 1;
